--- a/project.json
+++ b/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "v2.1-alpha",
+  "version": "2.1-alpha",
   "notes": "Добавлено обновление счетчика яиц",
   "about": "Курятник WIFI"
 }
