--- a/project.json
+++ b/project.json
@@ -1,5 +1,5 @@
 {
   "version": "2.1",
-  "notes": "Добавлено обновление счетчика яиц",
+  "notes": "Обновлен алгоритм счетчика яиц",
   "about": "Курятник WIFI"
 }
