--- a/project.json
+++ b/project.json
@@ -2,4 +2,5 @@
   "version": "2.1",
   "notes": "Обновлен алгоритм счетчика яиц",
   "about": "Курятник WIFI"
+   "ota_url": "https://github.com/PareNN/Chicken_coop/releases/download/Test/firmware.bin"
 }
