--- a/project.json
+++ b/project.json
@@ -2,5 +2,5 @@
   "version": "2.2",
   "notes": "Обновлен алгоритм счетчика яиц",
   "about": "Курятник WIFI"
-  "ota_url": "https://github.com/PareNN/Chicken_coop/releases/download/Test/firmware.bin"
+  "ota_url": "https://github.com/PareNN/Chicken_coop/releases/download/v2.1/firmware.bin"
 }
