--- a/project.json
+++ b/project.json
@@ -1,6 +1,6 @@
 {
   "version": "2.2",
   "notes": "Обновлен алгоритм счетчика яиц !!!",
-  "about": "Курятник WIFI"
-  "ota_url": "https://github.com/PareNN/Chicken_coop/releases/download/v2.2/firmware.bin"
+  "about": "Курятник WIFI",
+  "ota_url": "https://github.com/PareNN/Chicken_coop/releases/download/v2.2/Chicken_coop_v2.ino.bin"
 }
