--- a/project.json
+++ b/project.json
@@ -1,6 +1,6 @@
 {
   "version": "2.2",
-  "notes": "Обновлен алгоритм счетчика яиц !!",
+  "notes": "Обновлен алгоритм счетчика яиц !!!",
   "about": "Курятник WIFI",
   "ota_url": "https://github.com/PareNN/Chicken_coop/raw/main/bin/firmware.bin"
 }
