--- a/project.json
+++ b/project.json
@@ -1,5 +1,5 @@
 {
   "version": "2.2",
-  "notes": "Обновлен алгоритм счетчика яиц и настройка времени !",
+  "notes": "Обновлен алгоритм счетчика яиц и настройка времени !!",
   "about": "Курятник WIFI"
 }
