--- a/project.json
+++ b/project.json
@@ -1,6 +1,6 @@
 {
   "version": "2.2",
-  "notes": "Обновлен алгоритм счетчика яиц и настройка времени !!",
+  "notes": "Обновлен алгоритм счетчика яиц и настройка времени !",
   "about": "Курятник WIFI",
-  "ota_url": "https://github.com/PareNN/Chicken_coop/releases/download/v22/Chicken_coop_v2.ino.bin"
+  "ota_url": "http://github.com/PareNN/Chicken_coop/releases/download/v22/Chicken_coop_v2.ino.bin"
 }
