--- a/project.json
+++ b/project.json
@@ -1,5 +1,6 @@
 {
   "version": "2.2",
   "notes": "Обновлен алгоритм счетчика яиц и настройка времени ! Chicken_coop_v2.ino.esp32.bin",
-  "about": "Курятник WIFI"
+  "about": "Курятник WIFI",
+  "ota_url": "https://github.com/PareNN/Chicken_coop/blob/main/bin/flash.bin"
 }
