--- a/project.json
+++ b/project.json
@@ -2,5 +2,5 @@
   "version": "2.1",
   "notes": "Обновлен алгоритм счетчика яиц и настройка времени !!!",
   "about": "Курятник WIFI",
-  "ota_url": "https://github.com/PareNN/Chicken_coop/releases/download/v2.1/Chicken_coop_v2.ino.esp32.bin"
+  "ota_url": "https://github.com/PareNN/Chicken_coop/blob/main/Chicken_coop_v2.ino.esp32.bin"
 }
