--- a/project.json
+++ b/project.json
@@ -1,6 +1,5 @@
 {
   "version": "2.1",
   "notes": "Обновлен алгоритм счетчика яиц и настройка времени !!!",
-  "about": "Курятник WIFI",
-  "ota_url": "https://github.com/PareNN/Chicken_coop/blob/main/Chicken_coop_v2.ino.esp32.bin"
+  "about": "Курятник WIFI"
 }
