--- a/project.json
+++ b/project.json
@@ -1,5 +1,6 @@
 {
   "version": "2.2",
   "notes": "Обновлен алгоритм счетчика яиц и настройка времени!!!\nhttps://github.com/PareNN/Chicken_coop/releases/",
-  "about": "Курятник WIFI"
+  "about": "Курятник WIFI",
+  "ota_url": https://raw.githubusercontent.com/PareNN/master/bin/flash.gz
 }
