--- a/project.json
+++ b/project.json
@@ -1,6 +1,5 @@
 {
   "version": "2.2",
   "notes": "Обновлен алгоритм счетчика яиц и настройка времени!!!\nhttps://github.com/PareNN/Chicken_coop/releases/",
-  "about": "Курятник WIFI",
-  "ota_url": "https://raw.githubusercontent.com/PareNN/master/bin/flash.gz"
+  "about": "Курятник WIFI"
 }
