--- a/project.json
+++ b/project.json
@@ -1,6 +1,6 @@
 {
   "version": "2.2",
-  "notes": "Обновлен алгоритм счетчика яиц и настройка времени!!!\nhttps://github.com/PareNN/Chicken_coop/releases/",
+  "notes": "Обновлен алгоритм счетчика яиц и настройка времени!",
   "about": "Курятник WIFI",
   "ota_url": "https://github.com/PareNN/Chicken_coop/releases/download/v2.1/flash.bin"
 }
