--- a/project.json
+++ b/project.json
@@ -1,6 +1,6 @@
 {
-  "version": "2.2",
-  "notes": "Обновлен алгоритм счетчика яиц и настройка времени!",
+  "version": "2.1",
+  "notes": "Обновлен алгоритм счетчика яиц и настройка времени!\nhttps://github.com/PareNN/Chicken_coop/releases/download/v2.1/firmware.bin.gz",
   "about": "Курятник WIFI",
-  "ota_url": "https://github.com/PareNN/Chicken_coop/releases/download/v2.1/flash.bin"
+  "ota_url": "https://github.com/PareNN/Chicken_coop/releases/download/v2.1/firmware.bin.gz"
 }
