--- a/project.json
+++ b/project.json
@@ -1,6 +1,6 @@
 {
   "version": "2.1",
-  "notes": "Обновлен алгоритм счетчика яиц и настройка времени!\nhttps://github.com/PareNN/Chicken_coop/releases/download/v2.1/firmware.bin.gz",
+  "notes": "Обновлен алгоритм счетчика яиц и настройка времени!\nhttps://github.com/PareNN/Chicken_coop/releases/download/",
   "about": "Курятник WIFI",
   "ota_url": "https://github.com/PareNN/Chicken_coop/releases/download/v2.1/Chicken_coop_v2.ino.bin"
 }
